# SolidAngleThirdPart

AMD/AMD_AGS/lib/VS2013/: amd_ags_x64.lib  amd_ags_x64d.lib  amd_ags_x86.lib  amd_ags_x86d.lib
AMD/AMD_AGS/lib/VS2015/: amd_ags_x64.lib  amd_ags_x64d.lib  amd_ags_x86.lib  amd_ags_x86d.lib
DirectShow/DirectShow-1.0.0/src/Private/: wxutil.cpp
DirectXTex/: CMakeLists.txt
DirectXTex/DDSTextureLoader/: DDSTextureLoader.cpp  DDSTextureLoader.h
DirectXTex/DirectXTex/: DirectXTex.h  DirectXTex_Desktop_2015.vcxproj  DirectXTex_Desktop_2015.vcxproj.filters  DirectXTex_Desktop_2017.vcxproj
DirectXTex/WICTextureLoader/: WICTextureLoader.cpp
IntelTBB/tbb-2017_U5/: CMakeLists.txt
Ogg/libogg-1.2.2/lib/HTML5/: libogg.bc  libogg_O2.bc  libogg_Oz.bc
Ogg/libogg-1.2.2/lib/HTML5WIn32/: libogg.lib  liboggd.lib
Ogg/libogg-1.2.2/lib/win32/VS2013/: libogg.lib
Ogg/libogg-1.2.2/lib/win32/VS2015/: libogg.lib
Ogg/libogg-1.2.2/lib/win64/VS2013/: libogg_64.lib  liboggd_64.lib
Ogg/libogg-1.2.2/macosx/: libogg.dylib
PhysX/Lib/Win64/VS2015/: APEX_ClothingCHECKED_x64.lib  APEX_ClothingPROFILE_x64.lib  APEX_Clothing_x64.lib  APEX_DestructibleCHECKED_x64.lib  APEX_DestructiblePROFILE_x64.lib  APEX_Destructible_x64.lib  APEX_LegacyCHECKED_x64.lib  APEX_LegacyPROFILE_x64.lib  APEX_Legacy_x64.lib  APEX_LoaderCHECKED_x64.lib  APEX_LoaderPROFILE_x64.lib  APEX_Loader_x64.lib  ApexCommonCHECKED_x64.lib  ApexCommonPROFILE_x64.lib  ApexCommon_x64.lib  ApexFrameworkCHECKED_x64.lib  ApexFrameworkPROFILE_x64.lib  ApexFramework_x64.lib  LowLevelAABBCHECKED_x64.lib  LowLevelAABBDEBUG.lib  LowLevelAABBPROFILE_x64.lib  LowLevelAABB_x64.lib  LowLevelCHECKED_x64.lib  LowLevelClothCHECKED_x64.lib  LowLevelClothDEBUG.lib  LowLevelClothPROFILE_x64.lib  LowLevelCloth_x64.lib  LowLevelDEBUG.lib  LowLevelDynamicsCHECKED_x64.lib  LowLevelDynamicsPROFILE_x64.lib  LowLevelDynamics_x64.lib  LowLevelPROFILE_x64.lib  LowLevelParticlesCHECKED_x64.lib  LowLevelParticlesDEBUG.lib  LowLevelParticlesPROFILE_x64.lib  LowLevelParticles_x64.lib  LowLevel_x64.lib  NvParameterizedCHECKED_x64.lib  NvParameterizedPROFILE_x64.lib  NvParameterized_x64.lib  (+39 more)
PhysX/PhysX_3.4/Documentation/: PhysXGuide.chm
PhysX/PhysX_3.4/Tools/BinaryMetaData/: ps4.metaData  xboxone.metaData
Vorbis/libvorbis-1.3.2/lib/HTML5/: libvorbis.bc  libvorbis_O2.bc  libvorbis_Oz.bc  libvorbisfile.bc  libvorbisfile_O3.bc  libvorbisfile_Oz.bc
Vorbis/libvorbis-1.3.2/lib/HTML5Win32/: libvorbis.lib  libvorbisfile.lib
Vorbis/libvorbis-1.3.2/lib/Win32/VS2013/: libvorbis.lib  libvorbisfile.lib
Vorbis/libvorbis-1.3.2/lib/Win32/VS2015/: libvorbis.lib  libvorbisfile.lib
Vorbis/libvorbis-1.3.2/lib/Win64/VS2013/: libvorbis_64.lib  libvorbisfile_64.lib
WebRTC/rev.12643/lib/Win64/VS2015/: expat.lib  rtc_base_approved.lib  rtc_xmllite.lib
libOpus/opus-1.1/win32/VS2012/: opus.vcxproj
libOpus/opus-1.1/win32/VS2012/Win32/Debug/: celt.lib  opus.lib  silk_common.lib  silk_fixed.lib  silk_float.lib  speex_resampler.lib
libOpus/opus-1.1/win32/VS2012/Win32/Release/: celt.lib  opus.lib  silk_common.lib  silk_fixed.lib  silk_float.lib  speex_resampler.lib
libPNG/libPNG-1.5.2/lib/HTML5/: libpng.bc  libpng_O3.bc  libpng_Oz.bc
libPNG/libPNG-1.5.2/lib/Win32/VS2013/: libpng.lib  libpngd.lib  zlib.lib  zlibd.lib
libPNG/libPNG-1.5.2/lib/Win32/VS2015/: libpng.lib  libpngd.lib  zlib.lib  zlibd.lib
libPNG/libPNG-1.5.2/lib/Win64/VS2013/: libpng_64.lib  libpngd_64.lib  zlib_64.lib  zlibd_64.lib
openexr/Deploy/lib/VS2015/Win32/StaticDebug/: Half.lib  Iex.lib  IlmThread.lib  Imath.lib
openexr/Deploy/lib/VS2015/Win32/StaticRelease/: Half.lib  Iex.lib  IlmThread.lib  Imath.lib
openexr/Deploy/lib/VS2015/x64/StaticDebug/: Half.lib  Iex.lib  IlmThread.lib  Imath.lib
openexr/Deploy/lib/VS2015/x64/StaticRelease/: Half.lib  Iex.lib  IlmThread.lib  Imath.lib
zlib/v1.2.8/lib/Win32/VS2013/: zlibstatic.lib
zlib/v1.2.8/lib/Win32/VS2015/: zlibstatic.lib
zlib/v1.2.8/lib/Win64/VS2013/: zlib.lib  zlibstatic.lib
zlib/v1.2.8/lib/Win64/VS2015/: zlib.lib  zlibstatic.lib
zlib/zlib-1.2.5/Lib/HTML5/: zlib.bc  zlib_O2.bc  zlib_Oz.bc
zlib/zlib-1.2.5/Lib/Win32/: zlib.lib  zlibd.lib
